# loalang

./: .dockerignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.github/actions/docker/: Dockerfile  action.yml  entrypoint.sh
.github/actions/publish-std/: Dockerfile  action.yml  entrypoint.sh
.github/actions/version/: action.yml  index.js
.github/workflows/: build.yml  docker.yml  release.yml
docker/: base.dockerfile  loa-base.dockerfile  loa.dockerfile  vm-base.dockerfile  vm.dockerfile
fixtures/ValidModules/: SimpleClass.loa
src/__fixtures__/BasicAddition/: Main.loa  fixture.yml
src/__fixtures__/BasicInitializer/: Main.loa  fixture.yml
src/__fixtures__/BooleanLogic/: Main.loa  fixture.yml
src/__fixtures__/ComplexExpression/: Main.loa  fixture.yml
src/__fixtures__/EmptyProject/: fixture.yml
src/__fixtures__/EmptySourceFile/: Main.loa  fixture.yml
src/__fixtures__/Fibonacci/: Main.loa
src/__fixtures__/HelloWorld/: fixture.yml
src/__fixtures__/InheritedVariables/: Main.loa  fixture.yml
src/__fixtures__/InvalidInitializer/: Main.loa  fixture.yml
src/__fixtures__/PrivateMethods/: Test.loa  fixture.yml
src/__fixtures__/Self/: X.loa
src/__fixtures__/SingleVariableWithInitializer/: Main.loa  fixture.yml
src/__fixtures__/TypeParameterVariance/: Main.loa  fixture.yml
src/__fixtures__/UndefinedReferences/: X.loa
src/__fixtures__/_Fibonacci/: Main.loa  fixture.yml
src/__fixtures__/_HelloWorld/: Main.loa
src/lib/: bit_size.rs  cache.rs  compiler.rs  fixture_tests.rs  id.rs  mod.rs  program.rs  program_cell.rs  references.rs  sdk_dir.rs  stack.rs
src/lib/assembly/: assembly.rs  mod.rs  parser.rs
src/lib/bytecode/: bytecode.rs  mod.rs
src/lib/diagnostics/: diagnosed.rs  diagnostic.rs  mod.rs  reporter.rs
src/lib/format/: asg.rs  cst.rs  format.rs  formatter.rs  mod.rs
src/lib/generation/: bytecode.rs  generation_error.rs  generator.rs  mod.rs
src/lib/optimization/: mod.rs  optimizer.rs
src/lib/semantics/: analysis.rs  asg.rs  checker.rs  class.rs  expression.rs  lexical_scope.rs  message.rs  method.rs  mod.rs  navigator.rs  pattern.rs  program.rs  reference.rs  relevance.rs  resolver.rs  signature.rs  symbol.rs  test_utils.rs  typ.rs  type_assignability.rs  type_constructor.rs  type_parameter.rs  type_resolver.rs  type_validator.rs  types.rs  usage.rs  variable.rs
src/lib/semantics/checkers/: duplicate_declaration.rs  imprecise_float_literal.rs  invalid_import.rs  mod.rs  out_of_bounds_integer.rs  out_of_bounds_literal.rs  out_of_bounds_number.rs  private_methods.rs  type_assignment.rs  type_parameter_variance.rs  undefined_behaviour.rs  undefined_direct_reference.rs  undefined_reference.rs  undefined_type_reference.rs  valid_import.rs  valid_inherit.rs  variable_initialization.rs  wrong_number_of_type_arguments.rs
src/lib/server/: mod.rs  module_cell.rs  server.rs
src/lib/source/: location.rs  mod.rs  source.rs  span.rs  uri.rs
src/lib/syntax/: characters.rs  cst.rs  lexer.rs  mod.rs  module_cell.rs  node.rs  parser.rs  reference_resolver.rs  scope.rs  selection.rs  tokens.rs  tree.rs
src/lib/syntax/tree/: class.rs  class_body.rs  class_member.rs  declaration.rs  expression.rs  import_directive.rs  keyworded.rs  message.rs  message_pattern.rs  method.rs  method_body.rs  mod.rs  module.rs  module_declaration.rs  namespace_directive.rs  parameter_pattern.rs  qualified_symbol.rs  return_type.rs  signature.rs  symbol.rs  type_expression.rs
src/lib/vm/: call_stack.rs  class.rs  const_value.rs  mod.rs  native.rs  object.rs  runtime.rs  server_native.rs  stack.rs  vm.rs  vm_result.rs
std/: Boolean.loa  Character.loa  Number.loa  String.loa
