[package]
name = "loa"
version = "0.1.0"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
name = "loa"
path = "src/lib/mod.rs"

[[bin]]
name = "loa"
path = "src/bin/loa.rs"

[dependencies]
glob = "0.3.0"
jsonrpc-stdio-server = "14.0"
lsp-server = "0.2"
lsp-types = "0.60"
matches = "0.1.8"
num-bigint = "0.2"
serde = "1.0"
serde_json = "1.0"
log-panics = "2.0.0"
log = "0.4.8"
simple-logging = "2.0"
clap = "2.33.0"
rustyline = "5.0.4"
