[package]
name = "loalang"
version = "0.1.8"
authors = ["Emil Broman <emil@emilbroman.me>"]
edition = "2018"

[lib]
name = "loa"
path = "src/lib/mod.rs"

[[bin]]
name = "loa"
path = "src/bin/loa.rs"
required-features = ["build-bin-loa"]

[[bin]]
name = "loavm"
path = "src/bin/loavm.rs"
required-features = ["build-bin-vm"]

[features]
test-library = [
    "serde_yaml",
]
build-bin-vm = [
    "colored",
]
build-bin-loa = [
    "clap",
    "colored",
    "dirs",
    "graphql_client",
    "http",
    "hyper",
    "hyper-staticfile",
    "ignore",
    "jsonrpc-stdio-server",
    "log-panics",
    "lsp-server",
    "lsp-types",
    "reqwest",
    "rpassword",
    "rust-crypto",
    "rustyline",
    "serde_json",
    "serde_yaml",
    "simple-logging",
    "tar",
    "tee",
]

[dependencies]
jsonrpc-stdio-server = { version = "14.0", optional = true }
lsp-server = { version = "0.2", optional = true }
lsp-types = { version = "0.60", optional = true }
serde_json = { version = "1.0", optional = true }
log-panics = { version = "2.0.0", optional = true }
simple-logging = { version = "2.0", optional = true }
rustyline = { version = "5.0.4", optional = true }
colored = { version = "1.8.0", optional = true }
clap = { version = "2.33.0", optional = true }
reqwest = { version = "0.9", optional = true }
http = { version = "0.1.20", optional = true }
graphql_client = { version = "0.8.0", optional = true }
rpassword = { version = "4.0", optional = true }
tar = { version = "0.4", optional = true }
dirs = { version = "2", optional = true }
rust-crypto = { version = "0.2", optional = true }
serde_yaml = { version = "0.8", optional = true }
ignore = { version = "0.4", optional = true }
tee = { version = "0.1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.12", optional = true }
hyper-staticfile = { version = "0.4", optional = true }
log = "0.4.8"
bincode = "1.2.0"
glob = "0.3.0"
num-bigint = "0.2"
num-traits = "0.2"
fraction = { version = "0.6", features = ["with-serde-support"] }
peekmore = "0.4.0"
atty = "0.2"
matches = "0.1.8"
strum = "0.17.1"
strum_macros = "0.17.1"
